Add hover base setting

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,3 +3,13 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+a,
+button {
+  transition: opacity 0.25s;
+}
+
+a:hover,
+button:hover {
+  opacity: 0.6;
+}
