--- a/src/utilities/styles/index.css
+++ b/src/utilities/styles/index.css
@@ -1,8 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,500&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,500&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans&display=swap');
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+body {
+  font-family: 'Lato', sans-serif;
+}
 
 a,
 button {
